v1.9.2(兼容rundeck体系，新增rundeck_appname字段)
