# docs/swagger.yaml
@@ -11,14 +11,9 @@ definitions:
         type: string
       owner_cn:
         type: string
-      page_num:
-        minimum: 1
-        type: integer
+      page_num: {}
       page_size:
         description: 前端可选 15 30 50 100 200
-        maximum: 200
-        minimum: 1
-        type: integer
       sort:
         $ref: '#/definitions/util.SortOption'
     type: object
@@ -114,6 +109,8 @@ definitions:
         type: string
       owner_cn:
         type: string
+      rundeck_app_name:
+        type: string
       updated_at:
         format: date-time
         type: string
@@ -149,6 +146,8 @@ definitions:
       products:
         type: string
       publisher:
+        type: string
+      rundeck_app_name:
         type: string
       status:
         type: string
@@ -255,6 +254,8 @@ definitions:
         type: string
       env:
         type: string
+      is_rundeck:
+        type: boolean
       publisher:
         type: string
     type: object
@@ -274,24 +275,21 @@ definitions:
       branch:
         type: string
       end_time:
-        description: 结束时间
+        description: 结束时间（字符串格式）
         type: string
       env:
         type: string
-      page_num:
-        minimum: 1
-        type: integer
+      is_rundeck:
+        type: boolean
+      page_num: {}
       page_size:
         description: 前端可选 15 30 50 100 200
-        maximum: 200
-        minimum: 1
-        type: integer
       publisher:
         type: string
       sort:
         $ref: '#/definitions/util.SortOption'
       start_time:
-        description: 开始时间
+        description: 开始时间（字符串格式）
         type: string
     type: object
   publish.PublishQueryResult:
